[package]
name = "enum_inject"
version = "0.1.4"
edition = "2021"
homepage = "https://github.com/ptechen"
documentation = "https://docs.rs/enum_inject"
repository = "https://github.com/ptechen/enum_inject.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Implement inject For the Enumeration"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
display_enum = "0.1.1"